# dogpicsbot

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tests.py
.github/workflows/: release.yaml  test.yaml
