[tool.poetry]
name = "dogpicsbot"
version = "3.1.1"
description = "A simple Telegram bot that sends random dog pictures (and more!)."
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.1"
python-telegram-bot = "^22.5"
requests = "^2.32.5"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
pre-commit = "^4.3.0"
isort = "^7.0.0"
pylint = "^4.0.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-trio = "^0.8.0"
pytest-tornasync = "^0.6.0.post2"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
