[tool.poetry]
name = "dogpicsbot"
version = "3.1.1"
description = "A simple Telegram bot that sends random dog pictures (and more!)."
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.1"
python-telegram-bot = "^22.5"
requests = "^2.32.5"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
black = "^26.3.1"
pre-commit = "^4.5.1"
isort = "^7.0.0"
pylint = "^4.0.4"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-trio = "^0.8.0"
pytest-tornasync = "^0.6.0.post2"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
