[tool.poetry]
name = "dogpicsbot"
version = "3.1.1"
description = "A simple Telegram bot that sends random dog pictures (and more!)."
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.2"
python-telegram-bot = "^22.7"
requests = "^2.33.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
black = "^26.3.1"
pre-commit = "^4.6.0"
isort = "^8.0.1"
pylint = "^4.0.5"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-trio = "^0.8.0"
pytest-tornasync = "^0.6.0.post2"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
